--- a/index/templates/history_contents/spring/13.html
+++ b/index/templates/history_contents/spring/13.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Homme 윤성영</div>
 				</div>
 				<div class="winner_player">
@@ -411,7 +411,7 @@
 				<td>Flame</td>
 				<td>이호종</td>
 				<td>700</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
@@ -456,7 +456,7 @@
 				<td>Shy</td>
 				<td>박상면</td>
 				<td>450</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>9</td>
