--- a/index/templates/history_contents/spring/14.html
+++ b/index/templates/history_contents/spring/14.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Acorn 최천주</div>
 				</div>
 				<div class="winner_player">
@@ -477,7 +477,7 @@
 				<td>Save</td>
 				<td>백영진</td>
 				<td>650</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
@@ -540,7 +540,7 @@
 				<td>Flame</td>
 				<td>이호종</td>
 				<td>350</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 		</table>
 		<div class="reference">
