--- a/index/templates/history_contents/spring/15.html
+++ b/index/templates/history_contents/spring/15.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">MaRin 장경환</div>
 				</div>
 				<div class="winner_player">
@@ -247,7 +247,7 @@
 				<td>Duke</td>
 				<td>이호성</td>
 				<td>1000</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>2</td>
@@ -265,7 +265,7 @@
 				<td>Smeb</td>
 				<td>송경호</td>
 				<td>700</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
