--- a/index/templates/history_contents/spring/20.html
+++ b/index/templates/history_contents/spring/20.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Canna 김창동</div>
 					<div class="winner_player_name">Roach 김강희</div>
 				</div>
@@ -327,7 +327,7 @@
 				<td>Nuguri</td>
 				<td>장하권</td>
 				<td>900</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>5</td>
@@ -372,7 +372,7 @@
 				<td>Rascal</td>
 				<td>김광희</td>
 				<td>600</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 		</table>
 		<div class="reference">
