--- a/index/templates/history_contents/summer/13.html
+++ b/index/templates/history_contents/summer/13.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Impact 정언영</div>
 				</div>
 				<div class="winner_player">
@@ -522,7 +522,7 @@
 				<td>Shy</td>
 				<td>박상면</td>
 				<td>400</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>9</td>
@@ -531,7 +531,7 @@
 				<td>Homme</td>
 				<td>윤성영</td>
 				<td>350</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>9</td>
