--- a/index/templates/history_contents/summer/14.html
+++ b/index/templates/history_contents/summer/14.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Ssumday 김찬호</div>
 				</div>
 				<div class="winner_player">
@@ -495,7 +495,7 @@
 				<td>Acorn</td>
 				<td>최천주</td>
 				<td>500</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
