--- a/index/templates/history_contents/summer/15.html
+++ b/index/templates/history_contents/summer/15.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">MaRin 장경환</div>
 				</div>
 				<div class="winner_player">
@@ -284,7 +284,7 @@
 				<td>Ssumday</td>
 				<td>김찬호</td>
 				<td>1400</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>2</td>
@@ -311,7 +311,7 @@
 				<td>Smeb</td>
 				<td>송경호</td>
 				<td>1000</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
@@ -365,7 +365,7 @@
 				<td>MaRin</td>
 				<td>장경환</td>
 				<td>600</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 		</table>
 		<div class="reference">
