--- a/index/templates/history_contents/summer/16.html
+++ b/index/templates/history_contents/summer/16.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Smeb 송경호</div>
 				</div>
 				<div class="winner_player">
@@ -283,7 +283,7 @@
 				<td>Smeb</td>
 				<td>송경호</td>
 				<td>1200</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>2</td>
@@ -292,7 +292,7 @@
 				<td>Ssumday</td>
 				<td>김찬호</td>
 				<td>1100</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>3</td>
