--- a/index/templates/history_contents/summer/17.html
+++ b/index/templates/history_contents/summer/17.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Khan 김동하</div>
 					<div class="winner_player_name">Rascal 김광희</div>
 				</div>
@@ -305,7 +305,7 @@
 				<td>Smeb</td>
 				<td>송경호</td>
 				<td>1100</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
@@ -314,7 +314,7 @@
 				<td>CuVee</td>
 				<td>이성진</td>
 				<td>900</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
