--- a/index/templates/history_contents/summer/19.html
+++ b/index/templates/history_contents/summer/19.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Khan 김동하</div>
 					<div class="winner_player_name">Crazy 김재희</div>
 				</div>
@@ -296,7 +296,7 @@
 				<td>Summit</td>
 				<td>박우태</td>
 				<td>900</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>3</td>
@@ -323,7 +323,7 @@
 				<td>Kiin</td>
 				<td>김기인</td>
 				<td>800</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>6</td>
@@ -350,7 +350,7 @@
 				<td>Rascal</td>
 				<td>김광희</td>
 				<td>700</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>6</td>
@@ -368,7 +368,7 @@
 				<td>Khan</td>
 				<td>김동하</td>
 				<td>600</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 		</table>
 		<div class="reference">
