--- a/index/templates/history_contents/summer/21.html
+++ b/index/templates/history_contents/summer/21.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Khan 김동하</div>
 				</div>
 				<div class="winner_player">
@@ -240,7 +240,7 @@
 				<div class="post_season_block" style="margin-bottom: 50px;">
 					<div class="post_season_index">PO 2라운드 1경기*<br>(Bo5)</div>
 					<div class="post_season_team win">
-						<div class="post_season_team_img"><img src="{% static 'img/teams/LCK 2021 Summer/Dk.webp' %}"></div>
+						<div class="post_season_team_img"><img src="{% static 'img/teams/LCK 2021 Summer/DK.webp' %}"></div>
 						<div class="post_season_team_name">DK</div>
 						<div class="post_season_team_score">3</div>
 					</div>
@@ -344,7 +344,7 @@
 				<td>Kiin</td>
 				<td>김기인</td>
 				<td>900</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>3</td>
@@ -371,7 +371,7 @@
 				<td>Khan</td>
 				<td>김동하</td>
 				<td>800</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>7</td>
@@ -380,7 +380,7 @@
 				<td>Summit</td>
 				<td>박우태</td>
 				<td>800</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>9</td>
