--- a/index/templates/history_contents/winter/12-13.html
+++ b/index/templates/history_contents/winter/12-13.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">MakNooN 윤하운</div>
 				</div>
 				<div class="winner_player">
@@ -410,7 +410,7 @@
 				<td>MaKNooN</td>
 				<td>윤하운</td>
 				<td>1900</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>2</td>
@@ -482,7 +482,7 @@
 				<td>Flame</td>
 				<td>이호종</td>
 				<td>700</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>10</td>
