--- a/index/templates/history_contents/winter/13-14.html
+++ b/index/templates/history_contents/winter/13-14.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Impact 정언영</div>
 				</div>
 				<div class="winner_player">
@@ -495,7 +495,7 @@
 				<td>Impact</td>
 				<td>정언영</td>
 				<td>450</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>5</td>
