--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -13,7 +13,7 @@
 	</section>
 
 	<section id="champion">
-		<h2><a href="/champion?league=LCK_spring&patch={league_version}">챔피언 통계</a></h2>
+		<h2><a href="/champion?year=2024&league=LCK Summer&patch=all">챔피언 통계</a></h2>
 		<table class="champion_table">
 			<tr class="champion_table_th_tr">
 				<th colspan=2>챔피언</th><th>픽</th><th>밴</th><th>밴픽률</th><th>승리</th><th>패배</th><th>승률</th>
@@ -33,7 +33,7 @@
 				{% endfor %}
 			{% endif %}
 			<tr>
-				<td class="view_more" colspan="8"><a href="/champion?league=LCK_spring&patch=14.1">챔피언 통계 더보기 -></a></td>
+				<td class="view_more" colspan="8"><a href="/champion?year=2024&league=LCK Summer&patch=all">챔피언 통계 더보기 -></a></td>
 			</tr>
 		</table>
 	</section>
