--- a/index/templates/history_contents/Worlds/23.html
+++ b/index/templates/history_contents/Worlds/23.html
@@ -236,7 +236,7 @@
 				<td>Zeus</td>
 				<td>최우제</td>
 				<td>1100</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
