--- a/index/templates/history_contents/spring/12.html
+++ b/index/templates/history_contents/spring/12.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">FantasyStar 복한규</div>
 				</div>
 				<div class="winner_player">
