--- a/index/templates/history_contents/spring/21.html
+++ b/index/templates/history_contents/spring/21.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Khan 김동하</div>
 				</div>
 				<div class="winner_player">
@@ -354,7 +354,7 @@
 				<td>Khan</td>
 				<td>김동하</td>
 				<td>800</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>6</td>
@@ -390,7 +390,7 @@
 				<td>Rascal</td>
 				<td>김광희</td>
 				<td>600</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>9</td>
