--- a/index/templates/history_contents/spring/22.html
+++ b/index/templates/history_contents/spring/22.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Zeus 최우제</div>
 				</div>
 				<div class="winner_player">
@@ -370,7 +370,7 @@
 				<td>Rascal</td>
 				<td>김광희</td>
 				<td>800</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>8</td>
@@ -388,7 +388,7 @@
 				<td>Doran</td>
 				<td>최현준</td>
 				<td>700</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>8</td>
