--- a/index/templates/history_contents/summer/20.html
+++ b/index/templates/history_contents/summer/20.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Nuguri 장하권</div>
 					<div class="winner_player_name">Flame 이호종</div>
 				</div>
@@ -322,7 +322,7 @@
 				<td>Canna</td>
 				<td>김창동</td>
 				<td>1000</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>6</td>
@@ -331,7 +331,7 @@
 				<td>Rich</td>
 				<td>이재원</td>
 				<td>900</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>7</td>
@@ -367,7 +367,7 @@
 				<td>Doran</td>
 				<td>최현준</td>
 				<td>600</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 		</table>
 		<div class="reference">
