--- a/index/templates/history_contents/summer/22.html
+++ b/index/templates/history_contents/summer/22.html
@@ -31,7 +31,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Doran 최현준</div>
 				</div>
 				<div class="winner_player">
@@ -336,7 +336,7 @@
 				<td>Zeus</td>
 				<td>최우제</td>
 				<td>1100</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>4</td>
