--- a/index/templates/history_contents/summer/23.html
+++ b/index/templates/history_contents/summer/23.html
@@ -30,7 +30,7 @@
 			</div>
 			<div id="winner_player">
 				<div class="winner_player">
-					<div class="winner_player_index top"><img src="{% static 'img/position/TOP.webp' %}"><br>TOP</div>
+					<div class="winner_player_index top"><img src="{% static 'img/position/Top.webp' %}"><br>TOP</div>
 					<div class="winner_player_name">Doran 최현준</div>
 					<div class="winner_player_name">Museong 최현준</div>
 				</div>
@@ -430,7 +430,7 @@
 				<td>Zeus</td>
 				<td>최우제</td>
 				<td>800</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>7</td>
@@ -439,7 +439,7 @@
 				<td>Kiin</td>
 				<td>김기인</td>
 				<td>700</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>7</td>
@@ -457,7 +457,7 @@
 				<td>Doran</td>
 				<td>최현준</td>
 				<td>600</td>
-				<td><img class="POG_position_img" src="{% static 'img/position/TOP_black.webp' %}"></td>
+				<td><img class="POG_position_img" src="{% static 'img/position/Top_black.webp' %}"></td>
 			</tr>
 			<tr>
 				<td>9</td>
